name:                nanocoin
version:             0.1
synopsis:            Simple blockchain/crypto currency implemenation
license:             Apache
license-file:        LICENSE
author:              Adjoint Inc
maintainer:          info@adjoint.io
copyright:           2017 Adjoint Inc
Category:            Finance
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Nanochain,
                     Nanochain.P2P,
                     Nanochain.Block,
                     
                     Address,
                     Hash,
                     Key,
                     Multicast

  build-depends:      
    base              >= 4.6    && <5.0,
    transformers      >= 0.4    && <0.6,
    containers        >= 0.4    && <0.6,
    protolude         >= 0.1.10 && <0.2,
    time              >= 1.6    && <1.7,
    memory            >= 0.14   && <0.15,
    text              >= 1.2    && <1.3,
    aeson             >= 1.0    && <1.1,
    cereal            >= 0.5    && <0.6,
    bytestring        >= 0.10   && <0.11,
    base64-bytestring >= 1.0    && <1.1,
    cryptonite        >= 0.20   && <0.30,
    scotty            >= 0.11   && <0.12,
    network           >= 2.6    && <2.7,
    network-multicast >= 0.2    && <0.3,
    network-transport >= 0.4    && <0.5
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-type-defaults

executable nanocoin 
  hs-source-dirs:     exe
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , nanocoin 
  default-language:   Haskell2010
  ghc-options:
    -Wall
    -Werror
